Fixed IE11 cockpit missing overflow

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -2945,9 +2945,6 @@
 				min-height: 600px;
 			}
 		}
-		cockpit-grid {
-			overflow-y: hidden;
-		}
 		.multiselectionDialog {
 			.selectableList {
  				p {
